fixed header size on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ header {
 
 @media screen and (max-width: 960px) {
 	header {
-		font-size: 3em;
+		font-size: 2.25em;
 		height: 10vh;
 		padding: 1em 0;
 	}
